--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,11 @@
 }
 .inputPanel{
   position:absolute;
-  width:25%;
+  width:22%;
   left:5%;
   top:5%;
   height:90%;
-  background-color: rgb(197, 127, 255);
+  background-color: rgb(252, 0, 0);
 }
 .singularInput{
   position:absolute;
@@ -25,7 +25,7 @@
   left:5%;
 
   height:20%;
-  background-color: rgb(176, 139, 206);
+  background-color: rgb(102, 255, 0);
 
 }
 .subjectInput{
@@ -50,18 +50,18 @@
 
 .timePanel{
   position:absolute;
-  width:50%;
-  left:45%;
+  width:40%;
+  left:41%;
   top:5%;
   height:90%;
-  background-color: rgb(197, 127, 255);
+  background-color: rgb(9, 160, 55);
 
   display: flex;
   flex-wrap: wrap;
   align-content: center;
   justify-content: center;
 
-  gap: 10px 20px;
+  gap: 5px 15px;
 }
 .timeButton{
   background-color: rgb(255, 255, 255);
@@ -91,7 +91,7 @@
 .dayPanel{
   position:absolute;
   width:15%;
-  left:30%;
+  left:27%;
   top:5%;
   height:90%;
   background-color: rgb(197, 127, 255);
@@ -163,4 +163,56 @@
 }
 .arrow:hover{
   transform:scale(1.4);
+}
+.removeDayPanel{
+  position:absolute;
+  top:5%;
+  left:81%;
+  height:90%;
+  width:14%;
+
+  background-color: darkgreen;
+}
+.removeDayTitle{
+  position:absolute;
+  top:0%;
+  height:10%;
+  width:90%;
+  left:5%;
+  background-color: firebrick;
+}
+.removeDayButtonPanel{
+  position:absolute;
+  width:100%;
+  left:0%;
+  top:0%;
+  height:100%;
+  background-color: rgb(197, 127, 255);
+
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  gap: 10px 0px;
+}
+.removeDayButton{
+  background-color: rgb(15, 148, 3);
+  border-radius: 25px;
+  height:40px;
+  width:100px;
+  border: 2px black solid;
+}
+.removeDayButton:hover{
+  background-color: rgb(3, 105, 3);
+}
+.removeDayButtonClicked:hover{
+  background-color: rgb(255, 59, 59);
+}
+.removeDayButtonClicked{
+  background-color: rgb(255, 0, 0);
+  border-radius: 25px;
+  height:40px;
+  width:100px;
+  border: 2px black solid;
 }
