--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   position:absolute;
   width:22%;
   left:5%;
-  top:5%;
+  top:0%;
   height:90%;
   background-color: rgb(252, 0, 0);
 }
@@ -52,7 +52,7 @@
   position:absolute;
   width:40%;
   left:41%;
-  top:5%;
+  top:0%;
   height:90%;
   background-color: rgb(9, 160, 55);
 
@@ -92,7 +92,7 @@
   position:absolute;
   width:15%;
   left:27%;
-  top:5%;
+  top:0%;
   height:90%;
   background-color: rgb(197, 127, 255);
 
@@ -166,7 +166,7 @@
 }
 .removeDayPanel{
   position:absolute;
-  top:5%;
+  top:0%;
   left:81%;
   height:90%;
   width:14%;
@@ -215,4 +215,18 @@
   height:40px;
   width:100px;
   border: 2px black solid;
+}
+.generateButton{
+  position: absolute;
+  left:45%;
+  top:91%;
+  width:10%;
+  height:8%;
+
+  border-radius: 30px;
+  border:1px solid black;
+  background-color: white;
+}
+.generateButton:hover{
+  background-color: rgb(216, 216, 216);
 }
